Possible fix for the extra white space above About Me when mobile navbar expands

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,5 +1,6 @@
 /* For isDesktopOrLaptop */
 .nav-container-DesktopOrLaptop {
+    background-color: #1c1d25;
     display: flex;
     justify-content: space-between;
 }
